Headless: enable disk cache for default profile

Start using disk cache directory for default headless profile.

Bug: 882431
Change-Id: I1790a58fa2da6cb0fd114897d082e289d7a01bc5
Reviewed-on: https://chromium-review.googlesource.com/c/1350881
Reviewed-by: Andrey Kosyakov <caseq@chromium.org>
Commit-Queue: Andrey Lushnikov <lushnikov@chromium.org>
Cr-Commit-Position: refs/heads/master@{#611230}
Former-commit-id: 455e608c34ac81478c758e5be65eba370ea75220